Prevent wrapping and scroll the toolbar on horizontal overflow

--- a/styles/layout.css
+++ b/styles/layout.css
@@ -13,6 +13,11 @@ body {
 #toolbar {
 	height: 112px;
 	padding: 0;
+	
+	white-space: nowrap;
+	overflow: hidden;
+	overflow-x: auto;
+	
 	background-color: #3f51b5;
 }
 	#toolbar .divider {
